# Raspberry-GPIO-Wheel-control

./: .gitattributes  .gitignore  README.md  Raspberry GPIO control.cpp  Raspberry GPIO control.h
Movement Control VS Project/: RoombaDroneApp.sln
Movement Control VS Project/RoombaDroneApp/: RoombaDroneApp.vcxproj  RoombaDroneApp.vcxproj.filters  Source.cpp  main-copy.txt  main.cpp
Movement Control VS Project/RoombaDroneApp/src/: rplidar_driver.cpp
Movement Control VS Project/RoombaDroneApp/src/hal/: thread.cpp
PicoSensorControl2 - bad (for examples)/PicoSensorControl2/: CMakeLists.txt  PicoSensorControl2.sln  PicoSensorControl2.vgdbproj  adc_console.c
PicoSensors3 - good/PicoSensors3/: CMakeLists.txt  PicoSDKConfig.cmake  PicoSensors3.sln  PicoSensors3.vgdbproj  UpgradeLog.htm  UpgradeLog2.htm  hello_usb.c
RoombaDroneApp/: RoombaDroneApp.sln
RoombaDroneApp/RoombaDroneApp/: RoombaDroneApp.vcxproj  RoombaDroneApp.vcxproj.filters  main-copy.cpp  main.cpp
RoombaDroneApp/RoombaDroneApp/include/: rplidar_driver.h
RoombaDroneApp/RoombaDroneApp/src/hal/: event.h
